--- a/app/src/main/res/menu/menu_sudoku.xml
+++ b/app/src/main/res/menu/menu_sudoku.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="mhgr.no.sudoku.SudokuActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_save" android:title="@string/action_save"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
