--- a/app/src/main/res/menu/menu_main_menu.xml
+++ b/app/src/main/res/menu/menu_main_menu.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainMenuActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_no" android:title="@string/locale_no"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_en" android:title="@string/locale_en"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
